--- a/TP1/Compte_rendu/compte_rendu.tex
+++ b/TP1/Compte_rendu/compte_rendu.tex
@@ -8,16 +8,18 @@
 \newcommand\tab[1][1cm]{\hspace*{#1}}
 
 \title{SDD : TP 1}
-
+\author{Mathieu Boutin - Jérémy Morceaux}
 \begin{document}
 \maketitle
-\section*{Présentation générale}
+\section{Présentation générale}
 - Ce TP à pour but de créer une matrice représentant des coûts de production de différentes usines à différentes périodes depuis un fichier. Il faut ensuite récupérer les K usines ayant le plus faible coût de production. Finalement, il faut toutes les occurences d'une usines u dans cette liste et les supprimer.
-
+\\
+\\
 - schéma 
+\\
+\\
+- Les fichiers sources se trouvent dans le dossier \textbf{src}.Les fonctions relatives au matrices sont dans le fichier \textbf{ZZ\_matrix.c} et les fonctions relatives aux listes chainées sont dans le fichier \textbf{ZZ\_linked\_list.c}. Les entêtes sont dans le dossier \textbf{include}.
 
-
-- Les fichiers sources se trouvent dans le dossier \textbf{src}. Les entêtes sont dans le dossier \textbf{include}.
 \section{Détail de chaque fonction}
 \subsection{findElmt}
 \begin{algorithm}
