--- a/TP2/Rapport/algoprincipe.tex
+++ b/TP2/Rapport/algoprincipe.tex
@@ -27,6 +27,11 @@
 - Ce TP a pour but de créer les fonctions de base permettant de manipuler des piles et des files qui seront utiles pour le prochain TP. A l'aide de ses fonctions, on inverse une pile grâce à une file supplémentaire en vidant la pile dans la file, puis inversement, en vidant la file dans la pile.
 \\
 \\
+\begin{center}
+\includegraphics[scale=0.4]{Schema_base.png}
+
+Schéma de base
+\end{center}
 \underline{Structure des fichiers de pile : prenons par exemple une pile de taille n}
 \\
 \\
